Job @ Shiji (Wroc?aw): Senior Front-end Developer | JOIN. Square Front End Engineer, Dashboard | SmartRecruiters. ServiceNow Careers - Staff Front End Software Engineer (UI). ThinkHR - Senior Manager, Front-End Engineering. ThinkHR - Senior Front-End Engineer. Job Application for Senior Frontend Engineer, Video at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering  at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Bloomforth Corp Sr. Front End Developer | SmartRecruiters. Lucid Motors - Front-end Developer. Front-End Developer (Angular) - Experian Careers. New Relic Careers - Senior Front-End Engineer. Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN. Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters. QualiTest - Jobs: R&D Frontend Developer EL - Apply online. QualiTest - Jobs: R&D Frontend Team Leader EL - Apply online. Job @ Tundra Inc (Zürich): Senior Frontend Softwar... | JOIN. DataProphet Frontend Developer | SmartRecruiters. Ubisoft IT Developer ( Front-end) | SmartRecruiters. Ubisoft Développeur TI (Front-end) | SmartRecruiters. Kraken Digital Asset Exchange - Software Engineer, Frontend - Cryptowatch. Job Application for Senior Frontend Engineer - Content and Partners team at Glovo. Merkle Inc. AEM Frontend Tech Lead | SmartRecruiters. Ecosia - Jobs: Senior Software Developer: Frontend focus - Apply online. Job Application for Front-End Development Intern at Lightspeed ENG. Job Application for Senior Software Developer, Front-End (Golf) at Lightspeed ENG. Job Application for Frontend Architect  at Globality, Inc.. Job Application for Frontend Engineer  at Globality, Inc.. Job Application for Sr. Frontend Engineer  at Globality, Inc.. Job Application for S

--- a/frontend.html
+++ b/frontend.html
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/oifDafw4'>New Relic Careers - Senior Front-End Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/newrelic/job/oifDafw4'>New Relic Careers - Senior Front-End Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -265,7 +265,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
+<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
@@ -285,7 +285,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/castlegroup/job/or8yafw1'>Castle Group Careers - Clubhouse Front Desk Attendant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/or8yafw1'>Castle Group Careers - Clubhouse Front Desk Attendant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -386,7 +386,7 @@ Banking Technology|CCBD Technology is now hiring a Front End Developer?...</p>
 <p><span class="badge badge-light">Barcelona Barcelona Barcelona Barcelona, Catalonia, Spain Barcelona</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -398,7 +398,7 @@ Banking Technology|CCBD Technology is now hiring a Front End Developer?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/showpad/jobs/1783349'>Job Application for Senior Software Engineer, Web Frontend ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/showpad/jobs/1783349'>Job Application for Senior Software Engineer, Web Frontend ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... As a Senior Web Frontend Developer, you will have a big impact on the 
 Showpad product as you control how our various web applications, look, feel and 
