Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters. Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters. National Software Management Entry level Web Developer | SmartRecruiters. Woongjin, Inc Java Web Developer & Operation | SmartRecruiters. Job @ helloain (Leonding): WEB DEVELOPER | JOIN. Publicis Groupe Web Developer PHP/ Symfony (m/w/d) | SmartRecruiters. Publicis Groupe Web Developer E-Commerce &amp; Marketing (m/w/d) | SmartRecruiters.     Junior React Web Developer (m/w/d) at Flowtify GmbH . Helbiz Inc. - Back-End Web Developer - New York City. Web UI developer - Saggezza - Career Page. EASYRECRUE Web Developer | SmartRecruiters. EASYRECRUE Senior Web Developer | SmartRecruiters. Leikir Web Développeu·r·se Frontend (React / React Native) - CDI | SmartRecruiters. Job @ kapacht (Frankfurt): Web Developer (m/w/d) | JOIN. Job @ talpasolutions (Essen): Web Developer (Front... | JOIN. Job @ Smartfactory (Biel/Bienne):  Web Developer /... | JOIN. Silver Peak Systems Careers - Senior Web Applications Developer - Bangalore. Silver Peak Systems Careers - Senior Web Application Developer. Frontend Web Developer - Roku - CBS Interactive Careers. Ferratum Group - Web Analytics Developer - Google related web development.     Remote Junior Web Developer at Scopic Software . Web Application Developer (Rails) - AIcrowd. Web Developer | Knak Digital. The Havas Group Careers - Full-Stack Web Developer. Senior Web Application Developer - Latitude, Inc. - Career Page. Web Developer - LTD Global - Career Page. The Stars Group Careers - Web Developer (Web Poker). The Stars Group Careers - Java Middletier Web Developer.     Remote Junior Web Developer at Scopic Software . Front End Web Developer - Advantage Media Group - Career Page. Job Application for Senior Full Stack Web Developer at Mozilla. Job @ TwinCap (Zürich): Web Developer (Angular) | JOIN. Ignite Hospitality - Jobs: Web De

--- a/web-developer.html
+++ b/web-developer.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692111442-sr-ui-developer-web-developer-need-only-us-citizens-'>Arthur Grand Technologies Inc Sr UI developer / Web developer (Need only US Citizens) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -112,7 +112,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
@@ -200,7 +200,7 @@ a full team of technology professionals to take projects from design specs to?..
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/iponweb/job/oVbtafwt'>IPONWEB Careers - Front-End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/iponweb/job/oVbtafwt'>IPONWEB Careers - Front-End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Front-End Developer. Moscow, Russian Federation. Apply. Description. 
 Responsibilities: Implement a next-generation user interface using latest 
@@ -224,11 +224,11 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
+<h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/ABQ5DgleZu/Junior-Python-Web-Developer'>Junior Python web developer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/ABQ5DgleZu/Junior-Python-Web-Developer'>Junior Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -272,7 +272,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/yxjen523EV/Web-Application-Developer-II'>Web Application Developer II - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/yxjen523EV/Web-Application-Developer-II'>Web Application Developer II - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -301,7 +301,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999691264174-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999691264174-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -375,7 +375,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p>6 days ago ... Front -End Web Developer. Paris. Marketing. Permanent Contract. Apply for this 
 job. Aircall's mission is to transform the business phone industry! Aircall is an?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse'>Web Developer | Knak Digital</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse'>Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -411,7 +411,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691867860-praktikant-in-web-application-development'>Bosch Group Praktikant*in Web Application Development | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691867860-praktikant-in-web-application-development'>Bosch Group Praktikant*in Web Application Development | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -445,7 +445,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://trustedshops.recruitee.com/l/fr/o/website-developer-wmdiv'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trustedshops.recruitee.com/l/fr/o/website-developer-wmdiv'>
       Website Developer (w/m/div) - Trusted Shops GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -459,7 +459,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Arlington, VAArlington, VA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AvanceonLimited/743999686208821--net-webform-developer'>Avanceon Limited .Net Webform Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AvanceonLimited/743999686208821--net-webform-developer'>Avanceon Limited .Net Webform Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
